--- a/MyHealthMyRecord/android/build.gradle
+++ b/MyHealthMyRecord/android/build.gradle
@@ -9,10 +9,14 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+
+        kotlinVersion = "1.7.0"
     }
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" } 
+        maven { url "https://maven.google.com" } 
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
