--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.71.8",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-video": "^5.2.1",
     "react-native-vision-camera": "^2.15.4"
   },
   "devDependencies": {
