--- a/MyHealthMyRecord/android/app/build.gradle
+++ b/MyHealthMyRecord/android/app/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     }
 
     implementation project(':@react-native-camera-roll_camera-roll')
+    implementation project(':react-native-fs')
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
