--- a/MyHealthMyRecord/android/settings.gradle
+++ b/MyHealthMyRecord/android/settings.gradle
@@ -4,3 +4,5 @@ include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
 include ':@react-native-camera-roll_camera-roll'
 project(':@react-native-camera-roll_camera-roll').projectDir = new File(rootProject.projectDir, 	'../node_modules/@react-native-camera-roll/camera-roll/android')
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
