--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -13,15 +13,18 @@
     "@react-native-camera-roll/camera-roll": "^5.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@realm/react": "^0.4.3",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-video": "^5.2.1",
-    "react-native-vision-camera": "^2.15.4"
+    "react-native-vision-camera": "^2.15.4",
+    "realm": "^11.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
