--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-video": "^5.2.1",
