--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -26,7 +26,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
+    "react-native-video": "^6.0.0-alpha.6",
     "react-native-vision-camera": "^2.15.4",
     "realm": "^11.9.0"
   },
