--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -16,6 +16,7 @@
     "@realm/react": "^0.4.3",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "ibm-watson": "^8.0.0",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
