--- a/MyHealthMyRecord/android/app/build.gradle
+++ b/MyHealthMyRecord/android/app/build.gradle
@@ -89,7 +89,7 @@ def reactNativeArchitectures() {
 }
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
