--- a/MyHealthMyRecord/android/build.gradle
+++ b/MyHealthMyRecord/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 21
+        minSdkVersion = 24
         compileSdkVersion = 33
         targetSdkVersion = 33
 
@@ -11,6 +11,7 @@ buildscript {
         ndkVersion = "23.1.7779620"
 
         kotlinVersion = "1.7.0"
+        ffmpegKitPackage = "full"
     }
     repositories {
         google()
