--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -32,7 +32,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.6",
     "react-native-vision-camera": "^2.15.4",
-    "realm": "^11.9.0"
+    "realm": "^11.9.0",
+    "rfc4648": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
