--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
+    "react-native-config": "^1.5.1",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-media-console": "^2.0.6",
