--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -30,6 +30,8 @@
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.11.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.6",
     "react-native-vision-camera": "^2.15.4",
