--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-native": "^0.71.8",
     "react-native-config": "^1.5.1",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-media-console": "^2.0.6",
