--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -38,7 +38,8 @@
     "react-native-video": "^6.0.0-alpha.6",
     "react-native-vision-camera": "^2.15.4",
     "realm": "^11.9.0",
-    "rfc4648": "^1.5.2"
+    "rfc4648": "^1.5.2",
+    "rn-wordcloud": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
