--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -39,7 +39,8 @@
     "react-native-vision-camera": "^2.15.4",
     "realm": "^11.9.0",
     "rfc4648": "^1.5.2",
-    "rn-wordcloud": "^1.0.3"
+    "rn-wordcloud": "^1.0.3",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
