--- a/MyHealthMyRecord/android/app/src/main/AndroidManifest.xml
+++ b/MyHealthMyRecord/android/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:debuggable="true"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
+      android:allowBackup="true"
       android:theme="@style/AppTheme"
         android:requestLegacyExternalStorage="true">
       <activity
