--- a/MyHealthMyRecord/tsconfig.json
+++ b/MyHealthMyRecord/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-      "jsx": "react"
+    "esModuleInterop": true,
+    "jsx": "react"
   },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
