--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "cd android && ./gradlew :app:downloadAar"
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.3.1",
