--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "postinstall": "cd android && ./gradlew :app:downloadAar"
+   "postinstall": "cd android && gradlew.bat :app:downloadAar"
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.3.1",
@@ -19,7 +19,6 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
-    "ffmpeg-kit-react-native": "^5.1.0",
     "ibm-watson": "^8.0.0",
     "install": "^0.13.0",
     "react": "^18.2.0",
