--- a/MyHealthMyRecord/package.json
+++ b/MyHealthMyRecord/package.json
@@ -28,12 +28,14 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.9.0",
+    "react-native-gifted-charts": "^1.4.63",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-media-console": "^2.0.6",
     "react-native-paper": "^5.9.1",
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.11.0",
+    "react-native-svg": "^13.14.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.6",
